MYFACES-3063 use valueOf instead of creating new instances each time